@@ -74,7 +74,7 @@ Mode</FONT></B></A>&nbsp; A mode for editing ATS source code in Emacs.
 
 <HR SIZE=6 ALIGN=LEFT><P>
 
-<FONT size="+1">ATS Utility Commands</FONT>
+<FONT size="+1"><B>ATS Utility Commands</B></FONT>
 <MENU>
 <LI>
 <A href="../DOCUMENT/atsdocman/atsdocman.html"><B>atsdoc</B></A>:&nbsp;
