@@ -24,19 +24,19 @@ cleanall::
 DBSRC := \
   main.db \
   preface.db \
-  chap_syncolor.db \
-  chap_filename.db \
-  chap_fileincl.db \
-  chap_fixity.db \
-  chap_mainats.db \
-  chap_tailrec.db \
-  chap_mutailrec.db \
-  chap_hofun.db \
-  chap_funlist.db \
-  chap_reference.db \
-  chap_callbyref.db \
-  chap_lazyeval.db \
-  chap_stkalloc.db \
+  chap_syncolor_atxt.db \
+  chap_filename_atxt.db \
+  chap_fileincl_atxt.db \
+  chap_fixity_atxt.db \
+  chap_mainats_atxt.db \
+  chap_tailrec_atxt.db \
+  chap_mutailrec_atxt.db \
+  chap_hofun_atxt.db \
+  chap_funlist_atxt.db \
+  chap_reference_atxt.db \
+  chap_callbyref_atxt.db \
+  chap_lazyeval_atxt.db \
+  chap_stkalloc_atxt.db \
 
 ######
 
@@ -54,10 +54,10 @@ chap_syncolor: chap_syncolor_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_syncolor_atxt.dats: chap_syncolor.atxt
 	$(ATSDOC) -do $@ -i $< > chap_syncolor_atxt.txt
-chap_syncolor.db: chap_syncolor ; ./$< > $@
+chap_syncolor_atxt.db: chap_syncolor ; ./$< > $@
 
 clean:: ; $(RMF) chap_syncolor 
-cleanall:: ; $(RMF) chap_syncolor.db
+cleanall:: ; $(RMF) chap_syncolor_atxt.db
 
 ######
 
@@ -65,10 +65,10 @@ chap_filename: chap_filename_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_filename_atxt.dats: chap_filename.atxt
 	$(ATSDOC) -do $@ -i $< > chap_filename_atxt.txt
-chap_filename.db: chap_filename ; ./$< > $@
+chap_filename_atxt.db: chap_filename ; ./$< > $@
 
 clean:: ; $(RMF) chap_filename 
-cleanall:: ; $(RMF) chap_filename.db
+cleanall:: ; $(RMF) chap_filename_atxt.db
 
 ######
 
@@ -76,10 +76,10 @@ chap_fileincl: chap_fileincl_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_fileincl_atxt.dats: chap_fileincl.atxt
 	$(ATSDOC) -do $@ -i $< > chap_fileincl_atxt.txt
-chap_fileincl.db: chap_fileincl ; ./$< > $@
+chap_fileincl_atxt.db: chap_fileincl ; ./$< > $@
 
 clean:: ; $(RMF) chap_fileincl 
-cleanall:: ; $(RMF) chap_fileincl.db
+cleanall:: ; $(RMF) chap_fileincl_atxt.db
 
 ######
 
@@ -87,10 +87,10 @@ chap_fixity: chap_fixity_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_fixity_atxt.dats: chap_fixity.atxt
 	$(ATSDOC) -do $@ -i $< > chap_fixity_atxt.txt
-chap_fixity.db: chap_fixity ; ./$< > $@
+chap_fixity_atxt.db: chap_fixity ; ./$< > $@
 
 clean:: ; $(RMF) chap_fixity 
-cleanall:: ; $(RMF) chap_fixity.db
+cleanall:: ; $(RMF) chap_fixity_atxt.db
 
 ######
 
@@ -98,10 +98,10 @@ chap_mainats: chap_mainats_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_mainats_atxt.dats: chap_mainats.atxt
 	$(ATSDOC) -do $@ -i $< > chap_mainats_atxt.txt
-chap_mainats.db: chap_mainats ; ./$< > $@
+chap_mainats_atxt.db: chap_mainats ; ./$< > $@
 
 clean:: ; $(RMF) chap_mainats 
-cleanall:: ; $(RMF) chap_mainats.db
+cleanall:: ; $(RMF) chap_mainats_atxt.db
 
 ######
 
@@ -109,10 +109,10 @@ chap_tailrec: chap_tailrec_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_tailrec_atxt.dats: chap_tailrec.atxt
 	$(ATSDOC) -do $@ -i $< > chap_tailrec_atxt.txt
-chap_tailrec.db: chap_tailrec ; ./$< > $@
+chap_tailrec_atxt.db: chap_tailrec ; ./$< > $@
 
 clean:: ; $(RMF) chap_tailrec 
-cleanall:: ; $(RMF) chap_tailrec.db
+cleanall:: ; $(RMF) chap_tailrec_atxt.db
 
 ######
 
@@ -120,10 +120,10 @@ chap_mutailrec: chap_mutailrec_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_mutailrec_atxt.dats: chap_mutailrec.atxt
 	$(ATSDOC) -do $@ -i $< > chap_mutailrec_atxt.txt
-chap_mutailrec.db: chap_mutailrec ; ./$< > $@
+chap_mutailrec_atxt.db: chap_mutailrec ; ./$< > $@
 
 clean:: ; $(RMF) chap_mutailrec 
-cleanall:: ; $(RMF) chap_mutailrec.db
+cleanall:: ; $(RMF) chap_mutailrec_atxt.db
 
 ######
 
@@ -131,10 +131,10 @@ chap_hofun: chap_hofun_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_hofun_atxt.dats: chap_hofun.atxt
 	$(ATSDOC) -do $@ -i $< > chap_hofun_atxt.txt
-chap_hofun.db: chap_hofun ; ./$< > $@
+chap_hofun_atxt.db: chap_hofun ; ./$< > $@
 
 clean:: ; $(RMF) chap_hofun 
-cleanall:: ; $(RMF) chap_hofun.db
+cleanall:: ; $(RMF) chap_hofun_atxt.db
 
 ######
 
@@ -142,10 +142,10 @@ chap_funlist: chap_funlist_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_funlist_atxt.dats: chap_funlist.atxt
 	$(ATSDOC) -do $@ -i $< > chap_funlist_atxt.txt
-chap_funlist.db: chap_funlist ; ./$< > $@
+chap_funlist_atxt.db: chap_funlist ; ./$< > $@
 
 clean:: ; $(RMF) chap_funlist 
-cleanall:: ; $(RMF) chap_funlist.db
+cleanall:: ; $(RMF) chap_funlist_atxt.db
 
 ######
 
@@ -153,10 +153,10 @@ chap_reference: chap_reference_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_reference_atxt.dats: chap_reference.atxt
 	$(ATSDOC) -do $@ -i $< > chap_reference_atxt.txt
-chap_reference.db: chap_reference ; ./$< > $@
+chap_reference_atxt.db: chap_reference ; ./$< > $@
 
 clean:: ; $(RMF) chap_reference 
-cleanall:: ; $(RMF) chap_reference.db
+cleanall:: ; $(RMF) chap_reference_atxt.db
 
 ######
 
@@ -164,10 +164,10 @@ chap_callbyref: chap_callbyref_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_callbyref_atxt.dats: chap_callbyref.atxt
 	$(ATSDOC) -do $@ -i $< > chap_callbyref_atxt.txt
-chap_callbyref.db: chap_callbyref ; ./$< > $@
+chap_callbyref_atxt.db: chap_callbyref ; ./$< > $@
 
 clean:: ; $(RMF) chap_callbyref 
-cleanall:: ; $(RMF) chap_callbyref.db
+cleanall:: ; $(RMF) chap_callbyref_atxt.db
 
 ######
 
@@ -175,10 +175,10 @@ chap_lazyeval: chap_lazyeval_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_lazyeval_atxt.dats: chap_lazyeval.atxt
 	$(ATSDOC) -do $@ -i $< > chap_lazyeval_atxt.txt
-chap_lazyeval.db: chap_lazyeval ; ./$< > $@
+chap_lazyeval_atxt.db: chap_lazyeval ; ./$< > $@
 
 clean:: ; $(RMF) chap_lazyeval 
-cleanall:: ; $(RMF) chap_lazyeval.db
+cleanall:: ; $(RMF) chap_lazyeval_atxt.db
 
 ######
 
@@ -186,10 +186,10 @@ chap_stkalloc: chap_stkalloc_atxt.dats
 	$(ATSCC) -D_ATS_GCATS -o $@ $< -latsdoc
 chap_stkalloc_atxt.dats: chap_stkalloc.atxt
 	$(ATSDOC) -do $@ -i $< > chap_stkalloc_atxt.txt
-chap_stkalloc.db: chap_stkalloc ; ./chap_stkalloc > $@
+chap_stkalloc_atxt.db: chap_stkalloc ; ./chap_stkalloc > $@
 
 clean:: ; $(RMF) chap_stkalloc 
-cleanall:: ; $(RMF) chap_stkalloc.db
+cleanall:: ; $(RMF) chap_stkalloc_atxt.db
 
 ######
 
