@@ -62,7 +62,7 @@ The external code (in C) is colored
 }#comment("itemizedlist")
 
 #para("\
-Please find an example of ATS code #mycodelink("fact_dats.html", "on-line")
+Please find an example of ATS code #mydoclink("fact_dats.html", "on-line")
 that involves all of the syntax-coloring mentioned above.
 ")
 
