@@ -11,19 +11,19 @@
 <!ENTITY oe "oe">
 <!ENTITY bookinfo SYSTEM "bookinfo.db">
 <!ENTITY preface SYSTEM "preface.db">
-<!ENTITY chap_syncolor SYSTEM "chap_syncolor.db">
-<!ENTITY chap_filename SYSTEM "chap_filename.db">
-<!ENTITY chap_fileincl SYSTEM "chap_fileincl.db">
-<!ENTITY chap_fixity SYSTEM "chap_fixity.db">
-<!ENTITY chap_mainats SYSTEM "chap_mainats.db">
-<!ENTITY chap_tailrec SYSTEM "chap_tailrec.db">
-<!ENTITY chap_mutailrec SYSTEM "chap_mutailrec.db">
-<!ENTITY chap_hofun SYSTEM "chap_hofun.db">
-<!ENTITY chap_funlist SYSTEM "chap_funlist.db">
-<!ENTITY chap_reference SYSTEM "chap_reference.db">
-<!ENTITY chap_callbyref SYSTEM "chap_callbyref.db">
-<!ENTITY chap_lazyeval SYSTEM "chap_lazyeval.db">
-<!ENTITY chap_stkalloc SYSTEM "chap_stkalloc.db">
+<!ENTITY chap_syncolor SYSTEM "chap_syncolor_atxt.db">
+<!ENTITY chap_filename SYSTEM "chap_filename_atxt.db">
+<!ENTITY chap_fileincl SYSTEM "chap_fileincl_atxt.db">
+<!ENTITY chap_fixity SYSTEM "chap_fixity_atxt.db">
+<!ENTITY chap_mainats SYSTEM "chap_mainats_atxt.db">
+<!ENTITY chap_tailrec SYSTEM "chap_tailrec_atxt.db">
+<!ENTITY chap_mutailrec SYSTEM "chap_mutailrec_atxt.db">
+<!ENTITY chap_hofun SYSTEM "chap_hofun_atxt.db">
+<!ENTITY chap_funlist SYSTEM "chap_funlist_atxt.db">
+<!ENTITY chap_reference SYSTEM "chap_reference_atxt.db">
+<!ENTITY chap_callbyref SYSTEM "chap_callbyref_atxt.db">
+<!ENTITY chap_lazyeval SYSTEM "chap_lazyeval_atxt.db">
+<!ENTITY chap_stkalloc SYSTEM "chap_stkalloc_atxt.db">
 ]>
 <book id="proginats" lang="en">
 &bookinfo;
